--- a/Skyjoo/Resources/layout/playerField_layout.xml
+++ b/Skyjoo/Resources/layout/playerField_layout.xml
@@ -29,21 +29,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="right">
-                <ImageView
+                android:gravity="left">
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/img_stackCard"
-                    android:src="@drawable/iconplaceholder"
-                    android:contentDescription="@string/fieldcard"
-                    android:layout_gravity="top"/>
-                <ImageView
+                    android:orientation="vertical"
+                    android:gravity="left">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/img_stackCard"
+                        android:src="@drawable/iconplaceholder"
+                        android:contentDescription="@string/fieldcard"
+                        android:layout_gravity="top"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/img_reverseStackCard"
+                        android:contentDescription="@string/fieldcard"
+                        android:src="@drawable/iconplaceholder"
+                        android:layout_gravity="bottom"/>
+                </LinearLayout>
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/img_reverseStackCard"
-                    android:contentDescription="@string/fieldcard"
-                    android:src="@drawable/iconplaceholder"
-                    android:layout_gravity="bottom"/>
+                    android:id="@+id/textCurrentPlayer"/>
             </LinearLayout>
         </LinearLayout>
         <TextView
