add IconPack Support, add Beer IconPack

--- a/Skyjoo/Resources/layout/main_layout.axml
+++ b/Skyjoo/Resources/layout/main_layout.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -33,4 +34,14 @@
         android:id="@+id/textName"
         android:tooltipText="@string/name_input"
         android:inputType="text" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/iconpack_input"
+        android:layout_marginTop="16dp"/>
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner_iconpack"
+        android:layout_marginTop="16dp"/>
 </LinearLayout>
