--- a/Skyjoo/Resources/layout/server_layout.axml
+++ b/Skyjoo/Resources/layout/server_layout.axml
@@ -69,16 +69,8 @@
             android:layout_marginTop="20dp"/>
     </LinearLayout>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never">
-        <TextView
-            android:id="@+id/txtMessages"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="left|top"
-            android:textColor="#000000" />
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerPlayers"/>
 </LinearLayout>
